objects/NPI_Truth_Table__c.object
<CustomObject>
    <fields>
        <fullName>Column_Number__c</fullName>
        <description>This field indicates the co-ordinates</description>
        <label>Column Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Design External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <label>Design</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Class__c</fullName>
        <label>Device Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Mask_Experimental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mask Experimental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mask_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mask External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mask__c</fullName>
        <label>Mask</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Technology_Details__c</fullName>
        <description>This indicates the relation to Technology Details.</description>
        <label>NPI Technology Details</label>
        <referenceTo>NPI_Technology_Details__c</referenceTo>
        <relationshipLabel>NPI Truth Table</relationshipLabel>
        <relationshipName>NPI_Truth_Table</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is mapped to Region in VW_TRUTH_TABLE_DATAPREP/VW_TRUTH_TABLE_DESIGN</description>
        <label>Region</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <label>Row Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Truth_Value__c</fullName>
        <description>This field indicates the truth value of the design / mask</description>
        <label>Truth Value</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NPI Truth Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Model__c</columns>
        <columns>Region__c</columns>
        <columns>Row_Number__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Design__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NPI_Truth_Table__c.Mask</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NPI-TT-{000000}</displayFormat>
        <label>NPI Truth Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPI Truth Table</pluralLabel>
    <recordTypes>
        <fullName>Design</fullName>
        <active>true</active>
        <description>This data is mapped to  VW_Truth_TABLE_Design in Datamart</description>
        <label>Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mask</fullName>
        <active>true</active>
        <description>This data is mapped to  VW_Truth_TABLE_DataPrep in Datamart</description>
        <label>Mask</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>